@@ -1,5 +1,9 @@
 Changes with Apache 2.0.12-dev
 
+  *) Move the error_bucket definition from the http module to the
+     core server.  Every protocol will need this ability, not just
+     HTTP.  [Ryan Bloom]
+
   *) Modify mod_file_cache to save pre-formatted strings for 
      content-length and last-modified headers for performance. 
      [Mike Abbot <mja@trudge.engr.sgi.com>]
